*Empty MediaWiki Message*

--- a/ტამილები.mw
+++ b/ტამილები.mw
@@ -1,6 +1,3 @@
-{{ესკიზი}}
-
-
 '''ტამილები''' - ხალხი [[ინდოეთი|ინდოეთში]] (ტამილნადუს შტატის ძირითადი მოსახლენი), 61 მლნ ; ცხოვრობენ აგრეთვე [[შრი-ლანკა|შრი-ლანკის]] ჩრდილოეთში (დაახლ. 2,8 მლნ) და [[სინგაპური|სინგაპურში]]. წარმოშობით დრავიდები არიან, იყოფიან [[შრი-ლანკა|შრი-ლანკისა]] და [[ინდოეთი|ინდოეთის]] ტამილებად. 
 
 
@@ -9,6 +6,7 @@
 *'''ენა''': [[ტამილური ენა|ტამილური]].
 *'''მორწმუნეები''': [[ინდუიზმი|ინდუისტები]], არიან აგრეთვე [[სუნიზმი|სუნიტი მუსულმანები]] და [[ქრისტიანობა|ქრისტიანები]].
 
+{{ეთნოგრაფია}}
 [[კატეგორია:მსოფლიოს ხალხები]]
 [[კატეგორია:ინდოეთი]]
 
