--- a/გუჯარათელები.mw
+++ b/გუჯარათელები.mw
@@ -1,6 +1,3 @@
-{{ესკიზი}}
-
-
 '''გუჯარათელები''' - ხალხი [[ინდოეთი|ინდოეთში]] (46 მლნ), გუჯარათის შტატის ძირითადი მოსახლენი. ცხოვრობენ აგრეთვე [[პაკისტანი|პაკისტანში]]. მიეკუთვნებიან [[ევროპეიდული რასა|ევროპეიდული რასის]] ინდო-მედიტერანეულ შტოს.
 
 
@@ -9,5 +6,6 @@
 *'''ენა''': გუჯარათული. 
 *'''მორწმუნეები''': ძირითადად [[ინდუიზმი|ინდუისტები]], არიან აგრეთვე [[სუნიზმი|სუნიტი მუსულმანები]] და [[ჯაინიზმი|ჯაინისტები]].
 
+{{ეთნოგრაფია}}
 [[კატეგორია:მსოფლიოს ხალხები]]
 [[კატეგორია:ინდოეთი]]
