--- a/კატალონიელები.mw
+++ b/კატალონიელები.mw
@@ -1,6 +1,3 @@
-{{ესკიზი}}
-
-
 '''კატალონიელები''' - ხალხი [[ესპანეთი|ესპანეთში]] (ძირითადად კატალონიაში): 7,5 მლნ ცხოვრობენ აგრეთვე [[საფრანგეთი|საფრანგეთში]], [[იტალია|იტალიაში]] და ამერიკის ქვეყნებში. 
 
 
@@ -9,5 +6,6 @@
 *'''ენა''': კატალონიური. 
 *'''მორწმუნეები''': [[კათოლიციზმი|კათოლიკები]].
 
+{{ეთნოგრაფია}}
 [[კატეგორია:მსოფლიოს ხალხები]]
 [[კატეგორია:ესპანეთი]]
