*Empty MediaWiki Message*

--- a/ნიდერლანდელები.mw
+++ b/ნიდერლანდელები.mw
@@ -1,6 +1,3 @@
-{{ესკიზი}}
-
-
 '''ნიდერლანდელები''' - [[ხალხი]], [[ნიდერლანდი|ნიდერლანდის]] ძირითადი მოსახლენი (12,05 მლნ). 
 
 
@@ -8,6 +5,8 @@
 *'''საერთო რაოდენობა''': 13,27 მლნ. 
 *'''ენა''': [[ნიდერლანდური ენა|ნიდერლანდური]]. 
 *'''მორწმუნეები''': ძირითადად [[პროტესტანტიზმი|პროტესტანტები]] (კალვინისტები, მენონიტები), [[კათოლიციზმი|კათოლიკები]].
+
+{{ეთნოგრაფია}}
 
 [[კატეგორია:მსოფლიოს ხალხები]]
 [[კატეგორია:ნიდერლანდი]]
