*Empty MediaWiki Message*

--- a/სლოვენები.mw
+++ b/სლოვენები.mw
@@ -1,6 +1,3 @@
-{{ესკიზი}}
-
-
 '''სლოვენები''' - [[ხალხი]], [[სლოვენია|სლოვენიის]] ძირითადი მოსახლენი. 
 
 
@@ -9,6 +6,8 @@
 *'''ენა''': [[სლოვენური ენა|სლოვენური]].
 *'''მორწმუნეები''': [[კათოლიციზმი|კათოლიკები]], არიან აგრეთვე [[პროტესტანტიზმი|პროტესტანტები]] და [[მართლმადიდებლობა|მართლმადიდებლები]].
 
+
+{{ეთნოგრაფია}}
 [[კატეგორია:მსოფლიოს ხალხები]]
 
 [[de:Slowenen]]
