*Empty MediaWiki Message*

--- a/ფინელები.mw
+++ b/ფინელები.mw
@@ -1,6 +1,3 @@
-{{ესკიზი}}
-
-
 '''ფინელები''' - [[ხალხი]], [[ფინეთი|ფინეთის]] ძირითადი მოსახლენი (4,65 მლნ). 
 
 
@@ -9,6 +6,7 @@
 *'''ენა''': [[ფინური ენა|ფინური]]. 
 *'''მორწმუნეები''': [[პროტესტანტიზმი|პროტესტანტები]] ([[ლუთერანიზმი|ლუთერანები]]).
 
+{{ეთნოგრაფია}}
 [[კატეგორია:მსოფლიოს ხალხები]]
 [[კატეგორია:ფინელები|*]]
 
