--- a/შვედები.mw
+++ b/შვედები.mw
@@ -1,6 +1,3 @@
-{{ესკიზი}}
-
-
 '''შვედები''' - [[ხალხი]], [[შვეცია|შვეციის]] ძირითადი მოსახლენი (8,06 მლნ). 
 
 
@@ -9,6 +6,7 @@
 *'''ენა''': [[შვედური ენა|შვედური]].
 *'''მორწმუნეები''': [[ქრისტიანობა|ქრისტიანები]] (ძირითადად [[ლუთერანიზმი|ლუთერანები]]).
 
+{{ეთნოგრაფია}}
 [[კატეგორია:მსოფლიოს ხალხები]]
 [[კატეგორია:შვედები|*]]
 
