*Empty MediaWiki Message*

--- a/სან-ფრანცისკო.mw
+++ b/სან-ფრანცისკო.mw
@@ -54,7 +54,7 @@
 
 ქალაქი და ქაუნთი '''სან-ფრანცისკო''' სიდიდით მეოთხეა [[აშშ]]-ის შტატ [[კალიფორნია|კალიფორნიაში]] და მე-14 აშშ-ში. სან-ფრანცისკო კათოლიკე წმინდანი ფრანკის ესპანური სახელია.
 
-{{ესკიზი}}
+{{აშშ}}
 
 
 [[კატეგორია:კალიფორნია]]
