*Empty MediaWiki Message*

--- a/სტენფორდის_უნივერსიტეტი.mw
+++ b/სტენფორდის_უნივერსიტეტი.mw
@@ -13,6 +13,7 @@
 ==რესურსები ინტერნეტშიი==
 *[http://www.stanford.edu/ სტენფორდის ოფიციალური ვებ-გვერდი]
 
+{{განათლება}}
 [[კატეგორია:აშშ-ის უნივერსიტეტები]]
 [[კატეგორია:სან-ფრანცისკო]]
 
