*Empty MediaWiki Message*

--- a/პრინსტონის_უნივერსიტეტი.mw
+++ b/პრინსტონის_უნივერსიტეტი.mw
@@ -11,7 +11,7 @@
 ==პრინსტონის ნეოლოგიზმები==
 ==ბმულები ინტერნეტში==
 
-
+{{განათლება}}
 [[კატეგორია:აშშ-ის უნივერსიტეტები]]
 [[კატეგორია:ნიუ-ჯერსი]]
 
