*Empty MediaWiki Message*

--- a/ნიუ-იორკის_უნივერსიტეტი.mw
+++ b/ნიუ-იორკის_უნივერსიტეტი.mw
@@ -11,7 +11,7 @@
 ==სტუდენტური ჟარგონი==
 ==იხ. აგრეთვე==
 ==რესურსები ინტერნეტში==
-
+{{განათლება}}
 [[კატეგორია:აშშ-ის უნივერსიტეტები]]
 [[კატეგორია:ნიუ-იორკი]]
 
