*Empty MediaWiki Message*

--- a/კოლუმბიის_უნივერსიტეტი.mw
+++ b/კოლუმბიის_უნივერსიტეტი.mw
@@ -3,11 +3,11 @@
 უნივერსიტეტი [[აივი ლიგა|აივი ლიგის]] წევრია. იურიდიულად ცნობილია როგორც ''კოლუმბიის უნივერსიტეტი ქალაქ ნიუ-იორკში''. მისი საბაკალავრო სკოლებია: [[კოლუმბიის კოლეჯი]], ფუს ფონდის საინჟინრო და ტექნიკური მეცნიერების სკოლა, საერთო სწავლების სკოლა. უნივერსიტეტს საფილიალო კავშირები აქვს [[ბარნარდის კოლეჯი|ბარნარდის კოლეჯთან]] (საბაკალავრო ლიბერალურ ხელოვნებათა კოლეჯი ქალთათვის), [[ტიჩერსის კოლეჯი|ტიჩერსის კოლეჯთან]], ებრაულ თეოლოგიურ სემინარიასთან და გაერთიანებულ თეოლოგიურ სემინარიასთან. შეთანხმებით ბარნარდისა და ტიჩერსის კოლეჯების კურსდამთავრებულებს დიპლომსა და ხარისხს კოლუმბიის უნივერსიტეტი ანიჭებს.
 
 ==კამპუსი==
-{{ესკიზი}}
+
 ==ისტორია==
 
 ==რესურსები ინტერნეტში==
-
+{{განათლება}}
 [[კატეგორია:აშშ-ის უნივერსიტეტები]]
 [[კატეგორია:აივი ლიგა]]
 [[კატეგორია:ნიუ-იორკი]]
