*Empty MediaWiki Message*

--- a/კარნეგი-მელონის_უნივერსიტეტი.mw
+++ b/კარნეგი-მელონის_უნივერსიტეტი.mw
@@ -9,7 +9,7 @@
 ==პოლიტიკური გაერთიანებები==
 ==რესურსები==
 *[http://www.cmu.edu/ უნივერსიტეტის ვებ-გვერდი]
-
+{{განათლება}}
 
 [[კატეგორია:აშშ-ის უნივერსიტეტები]]
 [[კატეგორია:პენსილვანია]]
