*Empty MediaWiki Message*

--- a/დართმუზის_კოლეჯი.mw
+++ b/დართმუზის_კოლეჯი.mw
@@ -1,7 +1,7 @@
 [[სურათი:Dartmouth Shield.png|thumb|კოლეჯის გერბი]]
 '''დართმუზის კოლეჯი''' (ინგ. Dartmouth College) კერძო აკადემიური დაწესებულებაა ჰანოვერში, [[ნიუ-ჰემპშირი]], [[აშშ]]. კოლეჯი [[აივი ლიგა|აივი ლიგის]] წევრია და ერთ-ერთია ცხრა კოლონიურ კოლეჯთაგან, რომელიც [[ამერიკის რევოლუცია|ამერიკის რევოლუციამდე]] დაარსდა. კოლეჯი დაფუძნდა 1769 წელს ელეაზარ უილოკის მიერ ნაწილოვრივ ამერიკელი ინდიელი მოძღვრის სახელად სამსონ ოკომის მიერ მოზიდული თანხებით და სიძველით მეცხრე კოლეჯია აშშ-ში. წამყვანი ლიბერალურ ხელოვნებათა საბაკალავრო პროგრამის პარალელურად დართმუზს აქვს სამედიცინო, საინჟინრო და ბიზნეს სკოლები, 18 სამაგისტრო პროგრამასთან ერთად, შესაბამისად სტანდარტული ამერიკული კლასიფიკაციით ის უნივერსიტეტის რანგზე დგას. თუმცა ტრადიციისამებრ, ნაწილობრივ დართმუზის კოლეჯის ისოტიული მნიშვნელობისა და ასევე საბაკალვრო განათლების უპირატესობის გამო მას კოლეჯად მოიხსენიებენ. 5.744 სტუდენტით დართმუზი ყველაზე მცირე სკოლაა აივი-ლიგის ოჯახში.
 
-{{ესკიზი}}
+{{განათლება}}
 
 [[კატეგორია:აშშ-ის უნივერსიტეტები]]
 [[კატეგორია:ნიუ-ჰემპშირი]]
