*Empty MediaWiki Message*

--- a/ოდესა.mw
+++ b/ოდესა.mw
@@ -46,7 +46,7 @@
 ოდესა სიდიდით მეხუთე ქალაქია უკრაინაში და ასევე მისი ყველაზე მნიშვნელოვანი სავაჭრო ცენტრი. მე-19 საუკუნეში ის იყო იმპერიული რუსეთის მესამე ქალაქი [[მოსკოვი|მოსკოვისა]] და [[სანკტ-პეტერბურგი|სანკტ-პეტერბურგის]] შემდეგ. ქალაქის ისტორიულ არქიტექტურას უფრო ხმელთაშუა იერი დაჰკრავს ვინემ რუსული, ფრანგული და იტალიური მიმდინარეობების გავლენით. ოდესისთვის ყოველთვის იყო დამახასიათებელი თავისუფალი ნება და ირონიული იუმორი, შესაძლოა მისი მდებარეობისა და მულტიკულტურიზმის წყალობით.
 
 
-{{ესკიზი}}
+{{უკრაინა}}
 
 [[კატეგორია:უკრაინის ქალაქები]]
 
