*Empty MediaWiki Message*

--- a/აკადემია.mw
+++ b/აკადემია.mw
@@ -6,7 +6,7 @@
 აკადემიის ბაღი ქალღმერთი [[ათინა|ათინასა]] და სხვა უკვდავთათვის მიძღვნილი წმინდა ადგილი იყო; ეს ასევე იყო ადგილი ბრინჯაოს ხანიდან მოყოლებული რელიგიური კულტისა, რომელსაც გმირ-ღმერთებს [[დიოსკური|დიოსკურელებს]] უკავშირებენ. დიოსკურთან ასოციაციის გამო [[სპარტენალები|სპარტანელები]] "აკადემიის ბაღს" ხელუხლებელს ტოვებდნენ [[ატიკა|ატიკაზე]] შემოსევების დროს, განსხვავებით რომაელი [[სულა|სულასგან]], რომელმაც ძვ.წ. 86 წელს ერთიანად გაჩეხა წმინდა ხეთისხილის ხეები ნაღმსატყორცნების ასაგებად.
 
 
-{{ესკიზი}}
+{{განათლება}}
 
 [[კატეგორია:ტერმინები]]
 [[კატეგორია:უძველესი განათლების კერები]]
