*Empty MediaWiki Message*

--- a/ცაგერის_მუნიციპალიტეტი.mw
+++ b/ცაგერის_მუნიციპალიტეტი.mw
@@ -1,7 +1,14 @@
 [[image:ge-rl-tsageri.PNG|thumb|ცაგერის რაიონი]]
 '''ცაგერის რაიონი''' - ადმინისტრაციულ-ტერიტორიული [[რაიონი]] [[რაჭა-ლეჩხუმის და ქვემო სვანეთის მხარე|რაჭა-ლეჩხუმის და ქვემო სვანეთის მხარეში]].
 
-{{ესკიზი}}
+==ბუნება==
+==მოსახლეობა==
+==მმართველობა==
+== ეკონომიკა==
+==კულტურა==
+==ღირშესანიშნაობანი==
+
+{{საქართველო}}
 
 
 {{რაჭა-ლეჩხუმი-ქვემო სვანეთი}}
