--- a/ონის_მუნიციპალიტეტი.mw
+++ b/ონის_მუნიციპალიტეტი.mw
@@ -1,7 +1,14 @@
 [[image:ge-rl-oni.PNG|thumb|ონის რაიონი]]
 '''ონის რაიონი''' - ადმინისტრაციულ-ტერიტორიული [[რაიონი]] [[რაჭა-ლეჩხუმის და ქვემო სვანეთის მხარე|რაჭა-ლეჩხუმის და ქვემო სვანეთის მხარეში]].
 
-{{ესკიზი}}
+==ბუნება==
+==მოსახლეობა==
+==მმართველობა==
+== ეკონომიკა==
+==კულტურა==
+==ღირშესანიშნაობანი==
+
+{{საქართველო}}
 
 
 {{რაჭა-ლეჩხუმი-ქვემო სვანეთი}}
