--- a/ოჩხამური_(დაბა).mw
+++ b/ოჩხამური_(დაბა).mw
@@ -1,7 +1,4 @@
-{{ესკიზი}}
-
-
 '''ოჩხამური'''  - [[დაბა]] [[ქობულეთის რაიონი|ქობულეთის რაიონში]]. დაბის სტატუსი მიენიჭა [[1954]] წელს. მოსახლეობა 5.0 ათასი (2002).
 
-
+{{საქართველო}}
 [[კატეგორია:საქართველოს დაბები]]
