*Empty MediaWiki Message*

--- a/ნასაკირალი.mw
+++ b/ნასაკირალი.mw
@@ -1,7 +1,4 @@
-{{ესკიზი}}
-
-
 '''ნასაკირალი''' - [[დაბა]] [[ოზურგეთის რაიონი|ოზურგეთის რაიონში]]. დაბის სტატუსი მიენიჭა [[1976]] წელს. მოსახლეობა 2.6 ათასი (2002).
 
-
+{{საქართველო}}
 [[კატეგორია:საქართველოს დაბები]]
