*Empty MediaWiki Message*

--- a/კემბრიჯის_უნივერსიტეტი.mw
+++ b/კემბრიჯის_უნივერსიტეტი.mw
@@ -30,7 +30,7 @@
 ამჟამად 31 კოლეჯიდან 28 შერეულია, დანარჩენი სამი კი ექსკლუზიურად ქალთათვის არის (ლუსი კავენდიში, ნიუ-ჰოლი და ნიუნჰამი). მაგდალენი ბოლო მამაკაცთა კოლეჯი იყო, რომელიც მხოლოდ [[1988]] წელს გახდა შერეული.
 
 
-{{ითარგმნება}}
+{{განათლება}}
 
 [[კატეგორია:დიდი ბრიტანეთის უნივერსიტეტები]]
 
