*Empty MediaWiki Message*

--- a/ლუი_XI.mw
+++ b/ლუი_XI.mw
@@ -3,7 +3,7 @@
 
 
 ==ბიოგრაფია==
-{{ესკიზი}}   
+{{საფრანგეთი}}   
 [[კატეგორია: საფრანგეთის მეფეები]]
 [[კატეგორია:დაბადებული  1423]]
 [[კატეგორია:გარდაცვლილი  1483]]
