--- a/ტექნოლოგია.mw
+++ b/ტექნოლოგია.mw
@@ -14,7 +14,7 @@
 
 ----
 
-===ტექნოლოგიის დარგები:===
+იპოლ===ტექნოლოგიის დარგები:===
 
 *[[აკუსტიკა]]
 *[[არქიტექტურა]]	
@@ -36,6 +36,7 @@
 *[[ტრანსპორტის ტექნოლოგია]]
 
 ----
+ნოთიღæØ&#461;ÚÓJძწჭ
 
 ===იხილეთ აგრეთვე===
 
