Reverted edit of 64.251.54.194, changed back to last version by RobotJcb

--- a/ტექნოლოგია.mw
+++ b/ტექნოლოგია.mw
@@ -14,7 +14,7 @@
 
 ----
 
-იპოლ===ტექნოლოგიის დარგები:===
+===ტექნოლოგიის დარგები:===
 
 *[[აკუსტიკა]]
 *[[არქიტექტურა]]	
@@ -36,7 +36,6 @@
 *[[ტრანსპორტის ტექნოლოგია]]
 
 ----
-ნოთიღæØ&#461;ÚÓJძწჭ
 
 ===იხილეთ აგრეთვე===
 
