*Empty MediaWiki Message*

--- a/ბუკნაჭოტი.mw
+++ b/ბუკნაჭოტი.mw
@@ -2,7 +2,7 @@
 '''ბუკნაჭოტი''' (Glaucidium passerinum),[[ ფრინველები|ფრინველთა]] [[ბუსნაირნი|ბუსნაირთა]] რიგი. სხეულის სიგრძე 17 სმ-მდეა, წონა 56-78 გრამი. მურა ფერის ზურგი მოფენილია წვრილი თეთრი ხალებით, თეთრ მუცელზე გასდევსსიგრძივი, ხოლო გვერდებზე განივი შავი ზოლები. ბინადრობს ევროპისა და ჩრდილოეთ აზიის წიწვოვან და შერეულ ტყეებში. ბუდეს იკეთებს ფუღუროებში. იკვებება [[მღრღნელები|მღრღნელებით]], [[მწერები|მწერებითა]] და ზოგჯერ [[ბეღურასნაირნი|ბეღურასნაირთა]] რიგირს ფრინველებითაც.
 
 [[კატეგორია:ბუსნაირნი]]
-{{ესკიზი}}
+{{ორნითოლოგია}}
 
 [[bg:Малка кукумявка]]
 [[cs:Kulíšek nejmenší]]
