*Empty MediaWiki Message*

--- a/ანჰინგისებრნი.mw
+++ b/ანჰინგისებრნი.mw
@@ -2,7 +2,7 @@
 '''ანჰინგისებრნი''' (Anhingidae),  [[ფრინველები|ფრინველების]] ოჯახი [[ნიჩაბფეხიანები (ფრინველები)|ნიჩაბფეხიანების]] რიგისა. შეიცავს ერთ გვარს, რომელიც 4 სახეობას აერთიანებს. გავრცელებულია როგორც აღმოსავლეთ, ისე დასავლეთ ნახევარსფეროს ტროპიკებში. ანჰინგისებრნი  ბინადრობენ [[მდინარე|მდინარეებისა]] და [[ტბა|ტბების]] ნაპირებზე. ბუდობენ [[ხე|ხეებსა]] და [[ბუჩქი|ბუჩქებზე]]. დებენ 3-6 მოცისფრო ან მომწვანო [[კვერცხი|კვერცხს]]. იკვებებიან [[თევზები|თევზით]] და წყლის სხვა ცხოველებით.
 
 [[კატეგორია:ნიჩაბფეხიანები (ფრინველები)]]
-{{ესკიზი}}
+{{ორნითოლოგია}}
 
 [[da:Slangehalsfugle]]
 [[de:Schlangenhalsvögel]]
