--- a/ზარათუშტრა.mw
+++ b/ზარათუშტრა.mw
@@ -1,6 +1,6 @@
 '''ზარათუშტრა''' ([[ირანული ენა|''ირან.'']], [[ბერძნული ენა|''ბერძნ.'']] ''ზოროასტრი''), ძველი სპარსული რელიგიის რეფორმატორი - [[ზოროასტრიზმი|ზოროასტრიზმის]] დამაარსებელი და წინასწარმეტყველი.
 
-{{ესკიზი}}
+{{ორნითოლოგია}}
 
 [[bg:Зороастър]]
 [[cs:Zarathuštra]]
