*Empty MediaWiki Message*

--- a/მარაბუ.mw
+++ b/მარაბუ.mw
@@ -2,7 +2,7 @@
 '''მარაბუ''', ''ადიუტანტი'' (Leptoptilus), [[ფრინველები|ფრინველთა]] გვარი [[ლაკლაკისნაირნი|ლაკლაკისნაირთა]] რიგისა. ცნობილია მარაბუს 3 სახეობა: [[აფრიკული მარაბუ]] (Leptoptilus crumeniferus), [[ინდური მარაბუ]] (Leptoptilus dubius) და [[იავური მარაბუ]] (Leptoptilus javanicus). მარაბუს სხეულის სიგრძე 110-115 სმ აღწევს, [[ფრთები|ფრთების]] შლილი - 3 მ-მდე. თავი და კისერი დაფარული აქვთ მეჩხერი [[ბუმბული|ბუმბულით]]; ზურგი შავი ან რუხია, მუცლის მხარე თეთრი. მარაბუ ბუდობს კოლონიებად ხეებზე ან ჭაობისპირა კლდეებზე. დედალი 2-4 კვერცხს დებს. კრუხობს ორივე მშობელი 1 თვეს. იკვებებიან ლეშით, ყოველგვარი ცხოველური საკვებითა და ნარჩენებით.
 
 [[კატეგორია:ლაკლაკისნაირნი]]
-{{ესკიზი}}
+{{ორნითოლოგია}}
 
 [[af:Maraboe]]
 [[de:Marabu]]
