*Empty MediaWiki Message*

--- a/ფრეგატისებრნი.mw
+++ b/ფრეგატისებრნი.mw
@@ -1,7 +1,7 @@
 [[სურათი:723px-Bindenfregattvogel.jpg|thumb|right|დიდებული ფრეგატი (Fregata minor)]]
 '''ფრეგატისებრნი''' (Fregatidae), [[ფრინველები|ფრინველთა]] ოჯახი [[ვარხვისნაირნი|ვარხვისნაირთა]] რიგისა. მოიცავს 1 გვარის 5 სახეობას. მათი სხეულის სიგრძე 78 სმ - 1 მ, მასა 2 კგ აღწევს. გრძელფრთიანი (შლილში 2-მდე), გრძელბოლოიანი ფრინველები არიან. აქვთ ვიწრო და გრძელი, ბოლოზე კაუჭიანი [[ნისკარტი]], თითებს შორის ფუძესტან აპკი. გავრცელებული არიან სუბტროპიკულ და ტროპიკულ ზონის ოკეანურ კუნძულზე. შებუმბლულია შავად და ლითონისებრი ბზინვარება დაკრავს, ზოგჯერ თეთრი ხალები აყრია. [[ჩიჩახვ]]ი შიშველია, მკვეთრი წითელი და [[ტიხტიხი|ტიხტიხის]] დროს გაბერილი. ბუდობენ კოლონიებად. იკვებებიან მფრინავი თევზებით, ზღვის უხერხემლოებით.
 
-{{ესკიზი}}    
+{{ორნითოლოგია}}    
 [[კატეგორია:ვარხვისნაირნი]]
 
 [[da:Fregatfugle]]
