*Empty MediaWiki Message*

--- a/ქართული_ქათამი.mw
+++ b/ქართული_ქათამი.mw
@@ -2,6 +2,6 @@
 
 ფერად შავი, ჩალისფერი, ჟრუნა, თეთრინაცარაა ან ჭრელია. ცოცხალი მასის ვარიაციური ფარგლები დიდია: დედალი იწონის 1,2-3 კგ-მდე, მამალაი 1,5-3,5 კგ-მდე. ხორცი მაღალხარისხოვანია. ნაკლავის გამოსავალი 80% არწევს. 5-8 თვის ქართული ქათამი იწყებს კვერცხდებას. საშუალო კვერცხმდებლობა 80-100 ც წელიწადში. კვერცხის მასა 50-60 გრამია. ქართული ქათამი ძვირფასი გენოფონდია. მისი მონაწილეობით მიღებული მაღალპროდუქტიული (რეზისტენტული) კროსები საქართველოში ყველგანაა  გავრცელებული.
 
-{{ესკიზი}}  
+{{ორნითოლოგია}}  
 
 [[კატეგორია:ქათმისნაირნი]]
