*Empty MediaWiki Message*

--- a/კალგარის_უნივერსიტეტი.mw
+++ b/კალგარის_უნივერსიტეტი.mw
@@ -1,6 +1,6 @@
 [[სურათი:UofC Coat.jpg|thumb|უნივერსიტეტის გერბი]] '''კალგარის უნივერსიტეტი''' მდებარეობს [[კალგარი|კალგარის]] ჩრდილო-დასავლეთ ნაწილში, [[ალბერტგას საგრაფო|ალბერტას საგრაფოში]], [[კანადა]] და აქ დაახ. 23.500 სრული და 4.500 არასრული დასწრების სტუდენტი სწავლობს. მას 100-მდე საბაკალვრო, სამაგისტრო და სადოქტორო პროგრამა გააჩნია. უნივერსიტეტის კამპუსი დაახლოებით 2,13 კმ²-ზეა გადაჭიმული და აქ 17 ფაკულტეტი, 53 დეპარტამენტი და 30-ზე მეტი კვლევითი ინსტიტუტი მდებარეობს. უნივერსიტეტის ყველაზე ცნობილი ფაკულტეტებია - ჰასკეინის ბიზნესის სკოლა, შულიხის საინჟინრო სკოლა, სამედიცინო სკოლა, იურიდიული სკოლა და 2007 წლიდან უდიდესი სავეტერინარო სკოლაც. უნივერსიტეტს 1917 პროფესორ-მასწავლებელი ჰყავს.
 
-{{ესკიზი}}
+{{განათლება}}
 
 ==რესურსები ინტერნეტში==
 * [http://www.ucalgary.ca უნივერსიტეტის ვებ-გვერდი]
