--- a/ჯერომ_სელინჯერი.mw
+++ b/ჯერომ_სელინჯერი.mw
@@ -1,6 +1,6 @@
 '''სელინჯერი, ჯერომ''' დეივიდ (* [[1 იანვარი]]. [[1919]], [[ნიუ-იორკი]]), ამერიკელი მწერალი. სახელი მოიხვეჭა რომანით "თამაში ჭვავის ყანაში" ([[1951]]). აღსანიშნავია სელინჯერის ეპიკური ციკლი ―   საგა გლეხების ოჯახზე ― "ბანანა თევზის ამინდი" ([[1948]]), "ფრენი და ზუი" ([[1961]]), "ჭერი ასწიეთ, დურგლებო" ([[1963]]), "სეიმური -გაცნობა" ([[1963]]). სელინჯერი ფსიქოლოგიური და ინტელექტუალური ნაწარმოებების ოსტატია. მისი გმირები უმთავრესად ბავშვები და მოზარდები არიან, რომლებიც მწვავედ განიცდიან კონფლიქტებს: აქედან მომდინარეობს მისი ტრაგიზმი, გაუცხოება, მარტოობა, დაბნეულობა, დეპრესია, პროტესტი საზოგადოებაში გაბატონებული სიყალბისა და მანკიერებისადმი. მის ბოლო ნაწარმოებებში იგრძნობა გატაცება რელიგ. დოქტრინებით, აღმოსავლეთის იდეალისტური ფოლოსოფიით, სელინჯერი [[კიერკეგორი, სერენ | კიერკეგორის]] ნააზრევით.
 
-{{ესკიზი}}
+{{აშშ}}
 
 [[კატეგორია:ამერიკელები]]
 [[კატეგორია:მწერლები]]
