*Empty MediaWiki Message*

--- a/ჯერომ_სელინჯერი.mw
+++ b/ჯერომ_სელინჯერი.mw
@@ -3,7 +3,7 @@
 {{აშშ}}
 
 [[კატეგორია:ამერიკელები]]
-[[კატეგორია:ამირიკელი მწერლები]]
+[[კატეგორია:ამერიკელი მწერლები]]
 [[კატეგორია:დაბადებული  1919  ]]
 
 [[bs:Jerome David Salinger]]
