*Empty MediaWiki Message*

--- a/ჟან-პოლ_სარტრი.mw
+++ b/ჟან-პოლ_სარტრი.mw
@@ -1,7 +1,7 @@
 [[სურათი:Sartre.jpg|thumb|right|ჟან-პოლ სარტრი]]
 '''ჟან-პოლ სარტრი''' (* [[21 ივნისი]] [[1905]], [[პარიზი]] ―     † [[15 აპრილი]], [[1980]], [[პარიზი]]), [[ფრანგები|ფრანგი]] მწერალი და [[ფილოსოფოსი]].
 
-{{ესკიზი}}   
+{{საფრანგეთი}}   
 
 [[კატეგორია:ფრანგები]]
 [[კატეგორია:ფრანგი მწერლები]]
