*Empty MediaWiki Message*

--- a/სოჰო_(ნიუ-იორკი).mw
+++ b/სოჰო_(ნიუ-იორკი).mw
@@ -7,7 +7,7 @@
 *აღმოსავლეთით: [[ლიტლ იტალი (მანჰეტენი)|ლიტლ იტალი]], [[ნოლიტა]] და [[ქვემო ისტ-საიდი (მანჰეტენი)|ქვემო ისტ-საიდი]]
 *სამხრეთით: [[ჩაინატაუნი (მანჰეტენი)|ჩაინატაუნი]]
 
-{{ესკიზი}}
+{{აშშ}}
 
 [[კატეგორია:მანჰეტენის უბნები]]
 
