*Empty MediaWiki Message*

--- a/ლუი_VIII.mw
+++ b/ლუი_VIII.mw
@@ -5,16 +5,16 @@
 
 ==ბიოგრაფია==
 
-{{ესკიზი}}
+
 
 ===ინგლისზე გალაშქრება 1215-1217===
 
-{{ესკიზი}}
+
 
 ===მეფობა===
 [[სურათი:Louis8.jpg|thumb|left|200px|ლუი VIII-ს და ბლანკა კასტილიელის მეფედ კურთხევა რეიმსის ტაძარში]]
 
-{{ესკიზი}}
+
 
 
 ==ქორწინება და შვილები==
@@ -33,7 +33,7 @@
 * ეტიენი დაიბადა და მოკვდა ([[1226]])
 * კარლოს I სიცილიელი ([[1227]]-[[1285]])
 
-
+{{საფრანგეთი}}
 
 [[კატეგორია: საფრანგეთის მეფეები]]
 [[კატეგორია:დაბადებული 1187 ]]
