*Empty MediaWiki Message*

--- a/ფილიპ_V_(საფრანგეთი).mw
+++ b/ფილიპ_V_(საფრანგეთი).mw
@@ -1,9 +1,9 @@
 [[სურათი:412px-Philippe V le Long.jpg|thumb|ფილიპ V]]
-'''ფილიპ V''' ''([[ფრანგული ენა|ფრანგ.]]:  Philippe V le Long)'' (* [[1291]],[[ლიონი]] -  † [[1 თებერვალი]], [[1322]])საფრანგეთის მეფე [[1322]]-დან. [[კაპეტინგი_(დინასტია)|კაპეტინგების]] დინასტიის წარმომადგენელი. [[ფილიპ_IV_(საფრანგეთი)|ფილიპ IV-ს]] და ჟანა ნავარელის შვილი.
+'''ფილიპ V''' ''([[ფრანგული ენა|ფრანგ.]]:  Philippe V le Long)'' (* [[1291]],[[ლიონი]] -  † [[1 თებერვალი]], [[1322]]) საფრანგეთის მეფე [[1322]]-დან. [[კაპეტინგი_(დინასტია)|კაპეტინგების]] დინასტიის წარმომადგენელი. [[ფილიპ_IV_(საფრანგეთი)|ფილიპ IV-ს]] და ჟანა ნავარელის შვილი.
 
 ==ბიოგრაფია==
 
-{{ესკიზი}}
+{{საფრანგეთი}}
 
 
 [[კატეგორია: საფრანგეთის მეფეები]]
