*Empty MediaWiki Message*

--- a/შარლ_IV_(საფრანგეთი).mw
+++ b/შარლ_IV_(საფრანგეთი).mw
@@ -3,7 +3,7 @@
 
 ==ბიოგრაფია==
 
-{{ესკიზი}}
+{{საფრანგეთი}}
 
 
 [[კატეგორია: საფრანგეთის მეფეები]]
@@ -11,7 +11,7 @@
 [[კატეგორია: გარდაცვლილი 1328]]
 
 
-'''
+
 
 [[cs:Karel IV. Sličný]]
 [[de:Karl IV. (Frankreich)]]
