*Empty MediaWiki Message*

--- a/იომ-ქიფურის_ომი.mw
+++ b/იომ-ქიფურის_ომი.mw
@@ -1,5 +1,5 @@
-[[სურათი:Yom Kippur War 2.jpg|thumb|300px|ისრაელის ჯარისკაცები არღვევენ იეგვიპის  ზურგს სინაის ფრონტზე]]
-'''იომ-კიპურის ომი''', ან '''რამადანის ომი''', ან '''ოქტომბრის ომი''' (ებრ.: מלחמת יום הכיפורים; მიხემეთ იომ ჰაკიპურიმ; არაბ. حرب تشرين - ჰარბ ტიშრინ), ასევე ცნობილი როგორც 1973 წლის არაბეთ-ისრაელის ომი, რომელიც დაიწყო 6 ოქტომბერს (იომ-კიპურის დღესასწაულს) და გრძელდებოდა 26 ოქტომბრამდე, [[1973]] წელს, [[ისრაელი|ისრაელსა]] და [[ეგვიპტე]]-[[სირია|სირიის]] კოალიციას შორის. ომი დაიწყო გამოუცხადებელი შეტაკებით ეგვიპტისა და სირიის მიერ სინასა და გოლანის მაღლობებზე (შესაბამისად), რომელიც ისრაელის მიერ იქნა შეპყრობილი ექვსი წლით ადრე [[ექვსდღიანი ომი|ექვსდღიანი ომის]] დროს, რომელიც თავის მხრივ ეგვიპტის მიერ იქნა წამოწყებული ტირანის სრუტის ბლოკადითა და სინის მთაზე სამხედრო დანადგარების დამონტაჟებით.
+[[სურათი:Yom Kippur War 2.jpg|thumb|300px|ისრაელის ჯარისკაცები არღვევენ ეგვიპტის კომანდოს ზურგს სინაის ფრონტზე]]
+'''იომ-კიპურის ომი''', ან '''რამადანის ომი''', ან '''ოქტომბრის ომი''' (ებრ.: מלחמת יום הכיפורים; მიხემეთ იომ ჰაკიპურიმ; არაბ. حرب تشرين - ჰარბ ტიშრინ), ასევე ცნობილი როგორც 1973 წლის არაბეთ-ისრაელის ომი, რომელიც დაიწყო 6 ოქტომბერს (იომ-კიპურის დღესასწაულს) და გრძელდებოდა 26 ოქტომბრამდე, [[1973]] წელს, [[ისრაელი|ისრაელსა]] და [[ეგვიპტე]]-[[სირია|სირიის]] კოალიციას შორის. ომი დაიწყო გამოუცხადებელი შეტაკებით ეგვიპტისა და სირიის მიერ [[სინაის ნახევარკუნძული|სინაისა]] და [[გოლანის მაღლობები|გოლანის მაღლობებზე]] (შესაბამისად), რომელიც ისრაელის მიერ იქნა შეპყრობილი ექვსი წლით ადრე [[ექვსდღიანი ომი|ექვსდღიანი ომის]] დროს, რომელიც თავის მხრივ ეგვიპტის მიერ იქნა წამოწყებული ტირანის სრუტის ბლოკადითა და სინის მთაზე სამხედრო დანადგარების დამონტაჟებით.
 
 ეგვიპტელები და სირიელები უპირატესობას იჭერდნენ პირველი 48 საათის განმავლობაში, რის შემდეგაც ომის სადავეები ისრაელის ხელში გადავიდა. ომის მეორე კვირისთვის სირიელები გოლანის მაღლობებიდან თითქმის განდევნილ იქნენ. სამხრეთით, სინის ნახევარკუნძულზე ისრაელმა ეგვიპტის არმიას კუდიდან შემოუტია, გადალახა [[სუეცის არხი]] და მთელ ეგვიპტის არმიას უკანა გზა და მომარაგება მოუჭრა სწორედ იმ მომენტში, როცა [[გაერო|გაეროს]] დაზავევის შეთანხმება შევიდა ძალაში.
 
