--- a/ოდესა.mw
+++ b/ოდესა.mw
@@ -41,14 +41,15 @@
 
 ოდესა 1819-1858 წლებში თავისუფალი პორტი (პორტო ფრანკო) იყო. საბჭოთა პერიოდში სსრკ-ის უმნიშვნელოვანესი სავაჭრო პორტი და სამხედრო სანაოსნო ბაზა გახდა. 2000 წლის 1 იანვარს ოდესის სავაჭრო პორტის კარანტინის მისადგომი თავისუფალ პორტად და თავისუფალ სავაჭრო ზონად გამოცხადდა 25 წლის ვადით.
 
-ოდესა თბილ წყალზე მდებარეობს, თუმცა მისი სამხედრო მნიშვნელობა საკმაოდ შეზღუდულია. [[თურქეთი|თურქეთის]] მიერ [[დარდანელის სრუტე|დარდანელის სრუტესა]] და [[ბოსფორი|ბოსფორზე]] კონტროლის დაწესებამ [[ნატო (ორგანიზაცია)|ნატოს]] შესაძლებლობა მისცა ოდესიდან [[ხმეთლაშუა ზღვა|ხმელთაშუა ზღვაზე]] მიმოსვლა შეეზღუდა. ქალაქს ორი მნიშვნელოვანი პორტი აქვს: თავად ოდესა და ''იუჟნი'' (საერთასორისო მნიშვნელობის ნავთობ ტერმინალი), რომელიც ქალაქის გარეუბანში მდებარეობს. კიდევ ერთი მნიშვნელოვანი პორტი, ''ილიჩევსკი'', იმავე ობლასტში მდებარეობს, ოდესის სამხრეთ-დასავლეთით. ერთობლიობაში ეს სამი პორტი და სარკინიგზო სისტემა მნიშვნელოვან სატრანსპორტო კვანძს წარმოადგენს. ოდესის ნავთობ და ქიმიურ-გადამმუშავებელი ქარხნები რუსეთისა და ევროპის ქსელებთან სტრატეგიული მნიშვნელობის სადენებით არის დაკავშირებული.
+ოდესა თბილ წყალზე მდებარეობს, თუმცა მისი სამხედრო მნიშვნელობა საკმაოდ შეზღუდულია. [[თურქეთი|თურქეთის]] მიერ [[დარდანელის სრუტე|დარდანელის სრუტესა]] და [[ბოსფორი|ბოსფორზე]] კონტროლის დაწესებამ [[ნატო (ორგანიზაცია)|ნატოს]] შესაძლებლობა მისცა ოდესიდან [[ხმელთაშუა ზღვა|ხმელთაშუა ზღვაზე]] მიმოსვლა შეეზღუდა. ქალაქს ორი მნიშვნელოვანი პორტი აქვს: თავად ოდესა და ''იუჟნი'' (საერთაშორისო მნიშვნელობის ნავთობ ტერმინალი), რომელიც ქალაქის გარეუბანში მდებარეობს. კიდევ ერთი მნიშვნელოვანი პორტი, ''ილიჩევსკი'', იმავე ობლასტში მდებარეობს, ოდესის სამხრეთ-დასავლეთით. ერთობლიობაში ეს სამი პორტი და სარკინიგზო სისტემა მნიშვნელოვან სატრანსპორტო კვანძს წარმოადგენს. ოდესის ნავთობ და ქიმიურ-გადამმუშავებელი ქარხნები რუსეთისა და ევროპის ქსელებთან სტრატეგიული მნიშვნელობის სადენებით არის დაკავშირებული.
 
-ოდესა სიდიდით მეხუთე ქალაქია უკრაინაში და ასევე მისი ყველაზე მნიშვნელოვანი სავაჭრო ცენტრი. მე-19 საუკუნეში ის იყო იმპერიული რუსეთის მესამე ქალაქი [[მოსკოვი|მოსკოვისა]] და [[სანკტ-პეტერბურგი|სანკტ-პეტერბურგის]] შემდეგ. ქალაქის ისტორიულ არქიტექტურას უფრო ხმელთაშუა იერი დაჰკრავს ვინემ რუსული, ფრანგული და იტალიური მიმდინარეობების გავლენით. ოდესისთვის ყოველთვის იყო დამახასიათებელი თავისუფალი ნება და ირონიული იუმორი, შესაძლოა მისი მდებარეობისა და მულტიკულტურიზმის წყალობით.
+ოდესა სიდიდით მეხუთე ქალაქია უკრაინაში და ასევე მისი ყველაზე მნიშვნელოვანი სავაჭრო ცენტრი. მე-19 საუკუნეში ის იყო იმპერიული რუსეთის მესამე ქალაქი [[მოსკოვი|მოსკოვისა]] და [[სანკტ-პეტერბურგი|სანკტ-პეტერბურგის]] შემდეგ. ქალაქის ისტორიულ არქიტექტურას უფრო ხმელთაშუა იერი დაჰკრავს ვინემ რუსული, ფრანგული და იტალიური მიმდინარეობების გავლენით. ოდესისთვის ყოველთვის იყო დამახასიათებელი თავისუფალი ნება და იუმორი, შესაძლოა მისი მდებარეობისა და მულტიკულტურიზმის წყალობით.
 
 
 {{უკრაინა}}
 
 [[კატეგორია:უკრაინის ქალაქები]]
+[[კატეგორია:შავიზღვისპირა ქალაქები]]
 
 [[bg:Одеса]]
 [[da:Odessa]]
