--- a/სანქტ-პეტერბურგი.mw
+++ b/სანქტ-პეტერბურგი.mw
@@ -60,7 +60,7 @@
 [[კატეგორია:რუსეთის ქალაქები]]
 [[კატეგორია:ევროპის უდიდესი ქალაქები]]
 [[კატეგორია:სანკტ-პეტერბურგი]]
-[[კატეგორია:მსოფლიო მემკვიდრეობის სიაში შეტანილი ქალაქები]]
+[[კატეგორია:მსოფლიო კულტურული მემკვიდრეობის ძეგლები]]
 
 [[an:San Petersburgo]]
 [[ar:سانت بطرسبرغ]]
