*Empty MediaWiki Message*

--- a/სანქტ-პეტერბურგი.mw
+++ b/სანქტ-პეტერბურგი.mw
@@ -39,9 +39,16 @@
 
 ქალაქი დააარსა პეტრე დიდმა 1703 წელს როგორც "ფანჯარა ევროპაში" და ის რუსეთის იმპერიის დედაქალაქი იყო 1917 წლამდე. 4,7 მილიონი მცხოვრებით (2002) სანკტ-პეტერბურგი დღეს სიდიდით რუსეთის მეორე და ევროპის მეოთხე ქალაქია, ერთ-ერთი უდიდესი ევროპული კულტურული ცენტრი და რუსეთის უმნიშვნელოვანესი საზღვაო პორტია ბალტიის ზღვაზე.
 
-სანკტ-პეტერბურგი ყველაზე ჩრდილოეთით მდებარეობს იმ ქალაქთა შორის, რომელთა მოსახლეობა მილიონს აღემატება. ქალაქის ცენტრი იუნისკოს მსოფლიო მემკვიდრეობის სიაშია შეტანილი. ქალაქი, რომელიც 200 წელზე მეტ ხანს რუსეთის პოლიტიკური და კულტურული ცენტრი იყო დღესაც აღფრთოვანებას იწვევს მნახველში და მას ხშირად "ჩრდილოეთის დედაქალაქს" უწოდებენ. ის ლენინგრადის ობლასტისა და ჩრდილო-დასავლეთის ფედერალური ოლქის ადმინისტრაციული ცენტრია.
+სანკტ-პეტერბურგი ყველაზე ჩრდილოეთით მდებარეობს იმ ქალაქთა შორის, რომელთა მოსახლეობა მილიონს აღემატება. ქალაქის ცენტრი [[იუნესკო|იუნესკოს]] მსოფლიო მემკვიდრეობის სიაშია შეტანილი. ქალაქი, რომელიც 200 წელზე მეტ ხანს რუსეთის პოლიტიკური და კულტურული ცენტრი იყო, დღესაც აღფრთოვანებას იწვევს მნახველში და მას ხშირად "ჩრდილოეთის დედაქალაქს" უწოდებენ. ის ლენინგრადის ობლასტისა და ჩრდილო-დასავლეთის ფედერალური ოლქის ადმინისტრაციული ცენტრია.
 
 ==არქიტექტურა==
+[[სურათი:Winter canal.jpg|thumb|left|”სამასი ხიდის ქალაქი”]]
+სანკტ-პეტერბურგის მეფური დიდებულება მიღწეულ იქნა რიგი არქიტექტურული დეტალებით, მათ შორის გრძელი, სწორი ბულვარებით, უკიდეგანო სასახლეებით, ბაღებითა და პარკებით, დეკორატიული ჭედური ლითონის გალავნებით, მონუმენტებითა და დეკორატიული ობელისკებით. თავად [[ნევა (მდინარე)|მდ. ნევა]], მისი მრავალრიცხოვანი არხებით, გრანიტის სანაპიროებითა და ხიდებით ქალაქს განსაკუთრებულ თვალისმომჭრელ ელფერს ანიჭებს. სწორედ ამ მრავალრიცხოვანი არხების გამო შეარქვეს პეტერბურგს თავის დროზე ”ჩრდილოეთის ვენეცია”.
+
+ქალაქის არქტიკის წრესთან, ერთი განედის გასწვრივ ჰელსიკნთან, სტოკჰოლმთან და ოსლოთან (60° N), მდებარეობის გამო მაისში, ივნისსა და ივლისში აქ ”თეთრი ღამეები”, ანუ მუდმივი გარიჟრაჟი იცის. თეთრი ღამეები უკავშირდება ქალაქის კიდევ ერთ ღირშესანიშნაობას - ცხრა გასახსნელ ხიდს მდ. ნევაზე. ტურისტები აწყდებიან ხოლმე ამ ხიდებს, ვინაიდან მხოლოდ ამ პერიოდში შეიძლება მათი გახსნისა და მათ ქვეშ გემების გასვლის პროცესის თვალთვალი.
+
+სანკტ-პეტერბურგის ისტორიული ცენტრი, ხშირად წოდებული როგორც [[ნეოკლასიციზმი|ნეოკლასიციზმის]] ღიაცისქვეშა მუზეუმი, იყო პირველი რუსული ძეგლი, რომელიც იუნესკოს მსოფლიო მემკვიდრეობის სიაში იქნა შეტანილი.
+
 ===სასახლეები===
 ===ტაძრები და ეკლესიები===
 ===სახალხო დაწესებულებები===
