*Empty MediaWiki Message*

--- a/ბალტიის_ზღვა.mw
+++ b/ბალტიის_ზღვა.mw
@@ -1,5 +1,5 @@
 [[სურათი:Phytoplankton bloom in the Baltic Sea (July 3, 2001).jpg|thumb|300px|[[ფიტოპლანქტონი|ფიტოპლანქტონის]] ყვავილობა ბალტის ზღვის სამხრეთ ნაწილში, 3 ივლისი, 2001 (სატელ. ფოტო).]]
-'''ბალტიის ზღვა''' მდებარეობს [[ჩრდილოეთ ევროპა|ჩრდილოეთ ევროპაში]], ჩრდ. განედის 53-66 გრადუსებსა და აღმოსავლეთის გრძედის 20-26 გრადუსებს შორის. მას ესაზღვრება [[სკანდინავიის ნახევარკუნძული]], ჩრიდლოეთ ევროპის კონტინენტური ნაწილი, [[აღმოსავლეთ ევროპა]], [[ცენტრალური ევროპა]] და [[დანიის კუნძულები]]. ბალტიის ზღვა იღვრება [[კატეგატი|კატეგატში]] [[ორესუნდი|ორესუნდის]], [[დიდი ბელტი|დიდი]] და [[მცირე ბელტი|მცირე ბელტების]] გავლით.
+'''ბალტიის ზღვა''' მდებარეობს [[ჩრდილოეთ ევროპა|ჩრდილოეთ ევროპაში]], ჩრდ. [[გრძედი|გრძედის]] 53-66 გრადუსებსა და აღმოსავლეთის [[განედი|განედის]] 20-26 გრადუსებს შორის. მას ესაზღვრება [[სკანდინავიის ნახევარკუნძული]], ჩრიდლოეთ ევროპის კონტინენტური ნაწილი, [[აღმოსავლეთ ევროპა]], [[ცენტრალური ევროპა]] და [[დანიის კუნძულები]]. ბალტიის ზღვა იღვრება [[კატეგატი|კატეგატში]] [[ორესუნდი|ორესუნდის]], [[დიდი ბელტი|დიდი]] და [[მცირე ბელტი|მცირე ბელტების]] გავლით.
 
 კატეგატი თავის მხრვი გრძელდება [[სკაგერაკი|სკაგერაკით]] [[ჩრდიოლეთის ზღვა|ჩრდილოეთის ზღვაში]] და შემდეგ [[ატლანტის ოკეანე|ატლანტის ოკეანეში]]. ბალტიის ზღვა უკავშირდება [[თეთრი ზღვა|თეთრ ზღვას]] [[თეთრი ზღვის არხი|თეთრი ზღვის არხით]], ხოლო ჩრდილოეთის ზღვას [[კიელის არხი|კიელის არხით]].
 
