*Empty MediaWiki Message*

--- a/პარიზი.mw
+++ b/პარიზი.mw
@@ -1,5 +1,13 @@
 [[სურათი:Eiffel Tower from Place du Trocadéro.jpg|thumb|200px|პარიზი]]
-'''პარიზი''' არის [[საფრანგეთი|საფრანგეთის]] დედაქალაქი.
+'''პარიზი''' (Paris) არის [[საფრანგეთი|საფრანგეთის]] დედაქალაქი და ქვეყნის უდიდესი ქალაქია, ასევე ადმ. ცენტრი [[ილ-დე-ფრანსი (რეგიონი)|ილ-დე-ფრანსის]] რეგიონის, რომელიც მოიცავს პარიზსა და მის შემოგარენს. პარიზი ევროპის წამყვანი კულტურული, ბიზნესისა და პოლიტიკური ცენტრია, დამახასიათებელი [[ნეოკლასიციზმი|ნეოკლასიკური]] არქიტექტურითა და მისი გავლენით მოდასა და ხელოვნებაზე. მეტსახელად ”სინათლის ქალაქი” (la Ville Lumière), პარიზი მე-19 საუკუნიდან მოყოლებული ყველაზე რომანტიული ქალაქის რეპუტაციით სარგებლობს. 
+
+მდებარეობს რა ჩრდილო-ცენტრალურ საფრანგეთში [[სენა (მდინარე)|მდ. სენის]] ნაპირებზე, პარიზი მდიდარია მუზეუმებით, გალერეებით, რესტორნებითა და ღამის კლუბებით და მას ყველაზე მეტი სტუმარი ჰყავს მსოფლიოში (30 მილიონზე მეტი წელიწადში). პარიზის ყველაზე ცნობილი სიმბოლოა სენის ნაპირას მდებარე 324 მეტრი სიმაღლის ყავისფერი ლითონის [[ეიფელის კოშკი]].
+
+პარიზის ადმინისტრაციულ საზღვრებში 2004 წლის მონაცემებით 2.144.700 ადამიანი ცხოვრობდა, თუმცა ბოლო საუკუნის განმავლობაში ქალაქი გაიზარდა და მნიშვნელოვანწილად გაფართოვდა. ამჟამად პარიზის ურბანულ ნაწილში დაახ. 9,9 მილიონი მცხოვრებია, აგლომერაციაში კი - 11,5 მილიონი (1999).
+
+პარიზი და ილ-დე-ფრანსის რეგიონი აწარმებს საფრანგეთის სიმდიდრის მეოთხედზე მეტს და მისი [[ეშპ]] დაახ. €450 მილიარდი ($506.7 მილ. ამ. დოლარი) იყო 2003 წელს. ახლომდებარე ლა-დეფენსის ბიზნეს უბნის ჩათვლით პარიზში განლაგებულია ფრანგულ კომპანიათა თითქმის ნახევარის შტაბ-ბინები, ისევე როგორც მრავალ საერთაშორისო ფირმათა და ორგანიზაციათა წარმომადგენლობები.
+
+
 {{საფრანგეთი}}
 
 [[კატეგორია:ევროპის დედაქალაქები]]
