*Empty MediaWiki Message*

--- a/ნარინჯისფერი_რევოლუცია.mw
+++ b/ნარინჯისფერი_რევოლუცია.mw
@@ -8,7 +8,7 @@
 
 ოპოზიციის მოძრაობის ღონისძიებათა მასშტაბურობის წყალობით არჩევნების შედეგები ანულირებულ იქნა და უკრაინის უზენაემა სასამართლო 2004 წლის 26 დეკემბერს მეორე ტურის ხელმეორედ ჩატარებაზე დათანხმდა. ხელმეორე არჩევნებმა ცხადყო იუშენკოს უპირატესობა, რომელმაც ამომრჩეველთა 52% მიიღო მოწინააღმდეგის 44%-თან მიმართებაში. ამგვარად იუშენკო გამარჯვებულად ცნეს და ნარინჯისფერი რევოლუციის დაბოლოება იყო მისი საინაუგურაციო ცერემონია კიევში 2005 წლის 23 იანვარს.
 
-{{ესკიზი}}
+{{უკრაინა}}
 
 [[კატეგორია:უკრაინის ისტორია]]
 [[კატეგორია:რევოლუციები]]
