--- a/სანქტ-პეტერბურგი.mw
+++ b/სანქტ-პეტერბურგი.mw
@@ -50,6 +50,10 @@
 სანკტ-პეტერბურგის ისტორიული ცენტრი, ხშირად წოდებული როგორც [[ნეოკლასიციზმი|ნეოკლასიციზმის]] ღიაცისქვეშა მუზეუმი, იყო პირველი რუსული ძეგლი, რომელიც იუნესკოს მსოფლიო მემკვიდრეობის სიაში იქნა შეტანილი.
 
 ===სასახლეები===
+სანკტ-პეტერბურგი ცნობილია როგორც სასახლეების ქალაქი. ერთ-ერთი ყველაზე ადრეული მათგან იყო [[ზაფხულის სასახლე (სანკტ-პეტერბურგი)|ზაფხულის სასახლე]], მოკრძალებული სახლი აგებული [[პეტრე I]]-ის მიერ ზაფხულის ბაღში (1710–1714). გაცილებით შთამბეჭდავია მის ქვეშევრდომთა [[ბაროკო|ბაროკოს]] სტილის რეზიდენციები - ''კიკინის სადარბაზო'' და ''მენშიკოვის სასახლე'' ნევის სანაპროზე, [[ტრეზინი, დომენიკო|დომენიკო ტრეზინის]] პროექტით ნაგები 1710-1716 წლებში. მენშიკოვის სასახლის გვერდით მდებარე რეზიდენცია პეტრე II-სთვის იყო განკუთვნილი და ამჟამად მასში [[სანქტ-პეტერბურგის სახელმწიფო უნივერსიტეტი|სახელმწიფო უნივერსიტეტია]] განთავსებული.
+
+შესაძლოა ყველაზე ბრწყინვალე იმპერიულ სასახლეთაგან იყოს ბაროკოს სტილის [[ზამთრის სასახლე (სანქტ-პეტერბურგი)|ზამთრის სასახლე]] (1754–1762), უზარმაზარი შენობა ფეშენებელური ინტერიერით, რომელშიც ამჟამად [[ერმიტაჟი (სანკტ-პეტერბურგი)|ერმიტაჟის მუზეუმი]] მდებარეობს. იმავე არქიტექტორს, [[რასტრელი, ბართოლომეო|ბართოლომეო რასტრელის]] ეკუთვნის პროექტები სამი რეზიდენციისა [[ნევსკი პროსპექტი|ნევსკი პროსპექტის]] სიახლოვეს: ''სტროგანოვის სასახლე'' (1752–1754, ამჟამად ცვილის ფიგურათა მუზეუმი), ''ვორონცოვის სასახლე'' (1749–1757, ამჟამად სამხედრო სკოლა), და ''ანიჩკოვის სასახლე'' (1741–1750, მრავალჯერ გადაკეთებული, ამჟამად ბავშვთა სასახლე). სხვა ბაროკოს სასახლეებია ''შერემეტიევის სახლი'' ფონტანკაზე (აცრ შადრევნის სახლი), და ''ბელოსერლსკი-ბელოზერსკის სასახლე'' (1846–1848) ნევსკი პროსპექტზე, დიდი თავადი სერგეი ალექსანდროვიჩის ყოფილი რეზიდენცია.
+
 ===ტაძრები და ეკლესიები===
 ===სახალხო დაწესებულებები===
 ===სახალხო მონუმენტები===
