--- a/სანქტ-პეტერბურგი.mw
+++ b/სანქტ-პეტერბურგი.mw
@@ -52,7 +52,11 @@
 ===სასახლეები===
 სანკტ-პეტერბურგი ცნობილია როგორც სასახლეების ქალაქი. ერთ-ერთი ყველაზე ადრეული მათგან იყო [[ზაფხულის სასახლე (სანკტ-პეტერბურგი)|ზაფხულის სასახლე]], მოკრძალებული სახლი აგებული [[პეტრე I]]-ის მიერ ზაფხულის ბაღში (1710–1714). გაცილებით შთამბეჭდავია მის ქვეშევრდომთა [[ბაროკო|ბაროკოს]] სტილის რეზიდენციები - ''კიკინის სადარბაზო'' და ''მენშიკოვის სასახლე'' ნევის სანაპროზე, [[ტრეზინი, დომენიკო|დომენიკო ტრეზინის]] პროექტით ნაგები 1710-1716 წლებში. მენშიკოვის სასახლის გვერდით მდებარე რეზიდენცია პეტრე II-სთვის იყო განკუთვნილი და ამჟამად მასში [[სანქტ-პეტერბურგის სახელმწიფო უნივერსიტეტი|სახელმწიფო უნივერსიტეტია]] განთავსებული.
 
-შესაძლოა ყველაზე ბრწყინვალე იმპერიულ სასახლეთაგან იყოს ბაროკოს სტილის [[ზამთრის სასახლე (სანქტ-პეტერბურგი)|ზამთრის სასახლე]] (1754–1762), უზარმაზარი შენობა ფეშენებელური ინტერიერით, რომელშიც ამჟამად [[ერმიტაჟი (სანკტ-პეტერბურგი)|ერმიტაჟის მუზეუმი]] მდებარეობს. იმავე არქიტექტორს, [[რასტრელი, ბართოლომეო|ბართოლომეო რასტრელის]] ეკუთვნის პროექტები სამი რეზიდენციისა [[ნევსკი პროსპექტი|ნევსკი პროსპექტის]] სიახლოვეს: ''სტროგანოვის სასახლე'' (1752–1754, ამჟამად ცვილის ფიგურათა მუზეუმი), ''ვორონცოვის სასახლე'' (1749–1757, ამჟამად სამხედრო სკოლა), და ''ანიჩკოვის სასახლე'' (1741–1750, მრავალჯერ გადაკეთებული, ამჟამად ბავშვთა სასახლე). სხვა ბაროკოს სასახლეებია ''შერემეტიევის სახლი'' ფონტანკაზე (აცრ შადრევნის სახლი), და ''ბელოსერლსკი-ბელოზერსკის სასახლე'' (1846–1848) ნევსკი პროსპექტზე, დიდი თავადი სერგეი ალექსანდროვიჩის ყოფილი რეზიდენცია.
+შესაძლოა ყველაზე ბრწყინვალე იმპერიულ სასახლეთაგან იყოს ბაროკოს სტილის [[ზამთრის სასახლე (სანქტ-პეტერბურგი)|ზამთრის სასახლე]] (1754–1762), უზარმაზარი შენობა ფეშენებელური ინტერიერით, რომელშიც ამჟამად [[ერმიტაჟი (სანქტ-პეტერბურგი)|ერმიტაჟის მუზეუმი]] მდებარეობს. იმავე არქიტექტორს, [[რასტრელი, ბართოლომეო|ბართოლომეო რასტრელის]] ეკუთვნის პროექტები სამი რეზიდენციისა [[ნევსკი პროსპექტი|ნევსკი პროსპექტის]] სიახლოვეს: ''სტროგანოვის სასახლე'' (1752–1754, ამჟამად ცვილის ფიგურათა მუზეუმი), ''ვორონცოვის სასახლე'' (1749–1757, ამჟამად სამხედრო სკოლა), და ''ანიჩკოვის სასახლე'' (1741–1750, მრავალჯერ გადაკეთებული, ამჟამად ბავშვთა სასახლე). სხვა ბაროკოს სასახლეებია ''შერემეტიევის სახლი'' ფონტანკაზე (აცრ შადრევნის სახლი), და ''ბელოსერლსკი-ბელოზერსკის სასახლე'' (1846–1848) ნევსკი პროსპექტზე, დიდი თავადი სერგეი ალექსანდროვიჩის ყოფილი რეზიდენცია.
+
+[[ნეოკლასიციზმი|ნეოკლასიკურ]] სასახლეთა შორის ფიგურირებს ''წმინდა მიხეილის ციხე-კოშკი'', აგებული იმპერატორი პავლესთვის (1797–1801) ადრეული ზაფხულის სასახლის სანაცვლოდ. ''თავადი პოტიომკინის სასახლეში'' [[პირველი რუსეთის პარლამენტი]] იყო განთავსებული. ერმიტაჟის შენობათა მარცხნივ მდებარეობს ''მარმარილოს სასახლე'', გრაფი ორლოვის შეკვეთით აგებული 1768-85 წლებში [[რინალდი, ანტონიო|ანტონიო რინალდის]] პროექტით. დიდი თავადი ''მიხაილ პავლოვიჩის სასახლე'' (1819-25) ამჟამად [[რუსული მუზეუმი|რუსული მუზეუმის]] ბინაა. ასევე ნეოკლასიკურ სტილშია ნაგები ''იუსუპოვის სასახლე'' (1790-იანები), ასდაც [[რასპუტინი]] იქნა მოკლული; ''რაზუმოვსკის სასახლე'' (1762–1766); ''შუვალოვის სასახლე'' (1830–1838); და ''იელაგინის სასახლე'' (1818–1822), იმპერიული ოჯახის ფეშენებელური საზაფხულო დაჩა, იელაგინის კუნძულზე.
+
+ბოლო მნიშვნელოვანი რეზიდენციები [[ნიკოლოზ I]]-ის შვილებისთვის აიგო: [[მარიის სასახლე (სანქტ-პეტერბურგი)|მარიის სასახლე]] (1839–1844), წმინდა ისააკის ტაძრის პირდაპირ, სადაც ამჟამად ქალაქის საბჭოა განლაგებული; ''ნიკოლოზის სასახლე'' (1853–61); და ''ახალი მიხაილის სასახლე'' (1857-1861).
 
 ===ტაძრები და ეკლესიები===
 ===სახალხო დაწესებულებები===
