*Empty MediaWiki Message*

--- a/ჯონ_სტეინბეკი.mw
+++ b/ჯონ_სტეინბეკი.mw
@@ -1,14 +1,18 @@
 [[სურათი:inbeck 140.jpeg|thumb|ჯონ სტაინბეკის ბიუსტი კენერი როუზე, [[მონტერეი]], [[კალიფორნია]]]]
-'''ჯონ ერნსტ სტაინბეკ III''' (ინგ. John Ernst Steinbeck III) ([[27 თებერვალი]], [[1902]] – [[20 დეკემბერი]], [[1968]]) -- მე-20 საუკუნის ერთ-ერთი ყველაზე გამოჩენილი ამერიკელი მწერალი. 1962 წელს ნობელის პრემიის ლაურეატი ლიტერატურის დარგში, ყველაზე კარგად ცნობილია ნოველით "თაგვებსა და ადამიანებზე" (1937) და [[პულიცერის პრიზი|პულიცერის პრიზით]] დაჯილდოებული რომანით "რისხვის მტევნები" (1939). ორივეში აღწერილია დიდი დეპრესიის პერიოდში მუშათა კლასის ცხოვრება.
+'''ჯონ ერნსტ სტაინბეკ III''' (ინგ. John Ernst Steinbeck III) (* [[27 თებერვალი]], [[1902]] ―   †  
+[[20 დეკემბერი]], [[1968]]) - მე-20 საუკუნის ერთ-ერთი ყველაზე გამოჩენილი ამერიკელი მწერალი. 1962 წელს ნობელის პრემიის ლაურეატი ლიტერატურის დარგში, ყველაზე კარგად ცნობილია ნოველით "თაგვებსა და ადამიანებზე" (1937) და [[პულიცერის პრიზი|პულიცერის პრიზით]] დაჯილდოებული რომანით "რისხვის მტევნები" (1939). ორივეში აღწერილია დიდი დეპრესიის პერიოდში მუშათა კლასის ცხოვრება.
 
 სტაინბეკი ნატურალისტურ სტილში წერდა, ხშირად მისი წერის საგანი მუშათა კლასის ხალხი იყო, ხოლო მისი შრომების თემატიკა მოიცავს ინტერესთა ფართო სპექტრს - ოკეანის ბიოლოგიიდან დაწყებული, ჯაზით, პოლიტიკით, ფილოსოფიით, ისტორიითა და მითოლოგიით დამთავრებული.
 
 მისი ჩვიდმეტი ნამუშავერი, მათ შორის Cannery Row (1945) და The Pearl (1947) ჰოლივუდის მიერ ეკრანიზებულ იქნა. თავად სტაინბეკმაც გაითქვა სახელი, როგორც ჰოლივუდის მწერალმა და ერთხელ ოსკარის ნომინაციაში მოხვდა საუკეთესო სცენარისთვის ალფრედ ჰიჩკოკის ფილმისთვის "Lifeboat" (1945).
 
 
-{{ითარგმნება}}
+{{აშშ}}
+[[კატეგორია:ამერიკელები]]
 [[კატეგორია:ამერიკელი მწერლები]]
-
+[[კატეგორია:ნობელის პრემია ლიტერატურის დარგში]]
+[[კატეგორია:დაბადებული  1902]]
+[[კატეგორია:გარდაცვლილი 1968]]
 [[bg:Джон Стайнбек]]
 [[cs:John Steinbeck]]
 [[da:John Steinbeck]]
