*Empty MediaWiki Message*

--- a/ლესია_უკრაინკა.mw
+++ b/ლესია_უკრაინკა.mw
@@ -10,9 +10,12 @@
 
 ამ დროს მისი ბიძა მიხაილო დრაჰომანოვი აქეზებს ლესიას უკრაინული ფოლკლორის შესწავლაზე. უკრაინკაზე ასევე ზეგავლენა მოახდინა ცნობილმა კომპოზიტორმა მიკოლა ლისენკომ, და ასევე ცნობილმა უკრაინელმა დრამატურგმა და პოეტმა მიხაელ სტარიცკიმ.
 
-{{ითარგმნება}}
+{{უკრაინა}}
 
+[[კატეგორია:ურკაინელები]]
 [[კატეგორია:უკრაინელი მწერლები]]
+[[კატეგორია:დაბადებული  1871]]
+[[კატეგორია:გარდაცვლილი 1913]]
 
 [[de:Lesja Ukrainka]]
 [[en:Lesya Ukrainka]]
