*Empty MediaWiki Message*

--- a/ჯონი_კეში.mw
+++ b/ჯონი_კეში.mw
@@ -1,7 +1,7 @@
 [[სურათი:Johnny1998.JPG|thumb|250px|მამაკაცი შავებში – ჯონი კეში]]
-'''ჯონ რეი კეში''' (ინგ. John Ray Cash) ([[26 თებერვალი]], [[1932]] – [[12 სექტემბერი]], [[2003]]) – ერთ-ერთი უმნიშვნელოვანესი ამერიკელი [[ქანთრი (მუსიკა)|ქანთრი]] და [[როკი (მუსიკა)|როკ]] მუსიკის შემსრულებელი, გიტარისტი, სიმღერების ავტორი.
+'''ჯონ რეი კეში''' (ინგ. John Ray Cash) (* [[26 თებერვალი]], [[1932]] ―   †   [[12 სექტემბერი]], [[2003]]) – ერთ-ერთი უმნიშვნელოვანესი ამერიკელი [[ქანთრი (მუსიკა)|ქანთრი]] და [[როკი (მუსიკა)|როკ]] მუსიკის შემსრულებელი, გიტარისტი, სიმღერების ავტორი.
 
-კეში ცნიბილი იყო ღრმა გამორჩეული ბარიტონით, ე.წ. [[ტენესი|ტენესიური]] ბუმ-ჩიკა-ბუმ ხმოვანების ბენდის აკომპანემენტით, მუქი ფერის  ტანსაცმლითა და ქცევით, რომლის გამოც მას მეტსახელად "მამაკაცი შავებში" ("The Man in Black") შეარქვეს. კეში მის ყოველ კონცერტს მოკლე და მარტივი შესავლით "Hello, I'm Johnny Cash" (გამარჯობათ, მე ჯონი კეში ვარ) იწყებდა.
+კეში ცნობილი იყო ღრმა გამორჩეული ბარიტონით, ე.წ. [[ტენესი|ტენესიური]] ბუმ-ჩიკა-ბუმ ხმოვანების ბენდის აკომპანემენტით, მუქი ფერის  ტანსაცმლითა და ქცევით, რომლის გამოც მას მეტსახელად "მამაკაცი შავებში" ("The Man in Black") შეარქვეს. კეში მის ყოველ კონცერტს მოკლე და მარტივი შესავლით "Hello, I'm Johnny Cash" (გამარჯობათ, მე ჯონი კეში ვარ) იწყებდა.
 
 მძიმე პირადი ცხოვრება და რელიგიურობა კეშის მუსიკის ლეიტმოტივი იყო, განსაკუთრებით მის გვიანდელ კარიერაში, რომელშიც გამოძახილს მწუხარება, მორალური ტანჯვა და მონანიება პოულობს. მისი უკვდავი ჰიტებია: "I Walk the Line", "Folsom Prison Blues", "Ring of Fire", "Man In Black" და "Hurt". მას ასევე რამდენიმე განსაკუთრებით პოპულარული იუმორისტული სიმღერა აქვს ჩაწერილი: "One Piece At A Time", "The One on the Right is on the Left" და "A Boy Named Sue".
 
@@ -13,7 +13,11 @@
 ==რესურსები ინტერნეტში==
 *[http://www.johnnycash.com/ ოფიციალური ვებ-გვერდი]
 
-{{ითარგმნება}}
+{{მუსიკოსები}}
+{{აშშ}}
+[[კატეგორია:ამერიკელები]]
+[[კატეგორია:დაბადებული  1932]]
+[[კატეგორია:გარდაცვლილი 2003]]
 
 [[ca:Johnny Cash]]
 [[de:Johnny Cash]]
